--- a/package.json
+++ b/package.json
@@ -15,24 +15,27 @@
     "type-check": "tsc -p ./renderer/tsconfig.json && tsc -p ./electron-src/tsconfig.json"
   },
   "dependencies": {
+    "@electron/remote": "^2.1.2",
     "@gradio/client": "0.6.0",
     "electron-is-dev": "^1.2.0",
     "electron-next": "^3.1.5",
+    "electron-store": "^8.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.18.63",
     "@types/react": "^16.14.52",
     "@types/react-dom": "^16.9.24",
+    "autoprefixer": "^10.0.1",
     "electron": "^27.1.2",
     "electron-builder": "^24.9.1",
     "next": "latest",
+    "postcss": "^8",
     "rimraf": "^3.0.2",
-    "typescript": "^4.9.5",
     "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8"
+    "typescript": "^4.9.5"
   },
   "build": {
     "asar": true,
