--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "dependencies": {
     "@electron/remote": "^2.1.2",
     "@gradio/client": "0.6.0",
+    "dompurify": "^3.0.8",
     "electron-is-dev": "^1.2.0",
     "electron-next": "^3.1.5",
     "electron-store": "^8.1.0",
+    "highlight.js": "^11.9.0",
+    "marked": "^12.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1"
@@ -42,6 +45,9 @@
     "files": [
       "main",
       "renderer/out"
-    ]
+    ],
+    "win": {
+      "icon": "renderer/out/icon4.png"
+    }
   }
 }
